<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="Activity.UploadActivity"
    android:background="@drawable/yg">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- TODO: Update blank fragment layout -->
                <ImageView
                    android:layout_width="146dp"
                    android:id="@+id/imageview"
                    android:layout_height="164dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/b2" />

                <TextView
                    android:id="@+id/txtupload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/upload_book_here"
                    android:textColor="#191970"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_image"
                    android:padding="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/btnselect"
                    android:textSize="20sp"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    android:background="#E64A19"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/book_name"
                    android:padding="10dp"
                    android:id="@+id/edtbookname"
                    android:inputType="text"
                    android:textColor="#03A9F4"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/edtauthor"
                    android:padding="10dp"
                    android:textColor="#03A9F4"
                    android:inputType="text"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/author_name"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/edtedition"
                    android:padding="10dp"
                    android:textColor="#03A9F4"
                    android:inputType="number"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/enter_edition"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/edtsemester"
                    android:textColor="#03A9F4"
                    android:padding="10dp"
                    android:inputType="number"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/book_semester"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/edtprice"
                    android:padding="10dp"
                    android:textColor="#03A9F4"
                    android:inputType="number"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/price"
                    />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:layout_marginBottom="30dp"
                    android:padding="10dp"
                    android:textColor="#000"
                    app:hintText="Select Category " />

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#808080"
                    android:orientation="horizontal"
                    android:stretchColumns="*">

                    <TableRow>

                        <Button
                            android:id="@+id/uploadbtn"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dip"
                            android:text="@string/upload"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:background="#E64A19"/>

                    </TableRow>
                </TableLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="20sp"
                    android:background="@drawable/y1"
                    android:padding="10dp"
                    android:id="@+id/uploadedbooklist"
                    android:text="@string/your_uploaded_books" />

            </LinearLayout>
        </ScrollView>

    </FrameLayout>

