<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/yg"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/b2"
        android:id="@+id/logoimage"
        android:padding="1dp"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/logoimage"
        app:cardBackgroundColor="@color/colorGreen"
        android:layout_marginRight="20dp"
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/yg"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/fullname"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:id="@+id/email45"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:layout_marginTop="80dp"
            android:padding="10dp"
            android:hint="@string/mobile_no"
            android:inputType="phone"/>

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spinnersemester"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="120dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:textColor="#000"
            app:hintText="Select Semester" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spinnercollege"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="160dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:textColor="#000"
            app:hintText="Select College" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spinnerdepartment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:textColor="#000"
            app:hintText="Select Department" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="240dp"
            android:hint="@string/password"
            android:id="@+id/password"
            android:paddingTop="10dp"
            android:inputType="textPassword"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="280dp"
            android:hint="@string/renter_password"
            android:id="@+id/repassword"
            android:paddingTop="10dp"
            android:inputType="textPassword"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btnRegister34"
            android:layout_marginTop="330dp"
            android:text="@string/btn_register"
            android:background="@drawable/y1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="390dp"
            android:text="@string/login"
            android:id="@+id/btnlogin34"
            android:background="@drawable/y1"/>


        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />



    </android.support.v7.widget.CardView>

</RelativeLayout>