<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HomeFragment"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bookimageview"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/bookname"
            android:layout_toRightOf="@+id/bookimageview"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:textSize="24dp"
            android:layout_height="wrap_content"
            android:hint="@string/book_name" />

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookname"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/bookimageview"
            android:hint="@string/author_name"
            android:padding="5dp"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/author"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="9dp"
            android:layout_toRightOf="@+id/bookimageview"
            android:hint="@string/price"
            android:padding="5dp"
            android:textSize="22dp" />

    </RelativeLayout>

    </ScrollView>


</FrameLayout>